creada toolbar y card basica

--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -1,3 +1,22 @@
 .example-spacer {
     flex: 1 1 auto;
   }
+  .title {
+    font-size: 34px;
+    font-weight: 500;
+  }
+
+  .example-card {
+    max-width: 400px;
+    margin-top: 20px;
+    margin-left: 8px;
+  }
+
+  .toolbar {
+    background-color:   #55beff  ;
+    color: white;
+    width: 100.9%;
+    height: 70px;
+    margin-left: -8px;
+    margin-top: -8px;
+  }
