frontend de crud de usuario acabado

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,12 +1,14 @@
 <mat-toolbar class="toolbar">
-    <span class="title">
-      Microservicios App
+    <span class="title" >
+        Microservicios App
+      
+      
     </span>
-    <span class="example-spacer"></span>
+    <!-- <span class="example-spacer"></span>
     <button mat-icon-button class="example-icon favorite-icon" (click) = "openDialog()" aria-label="Example icon-button with heart icon">
       <mat-icon>create</mat-icon>
-    </button>
-  </mat-toolbar>
+    </button> -->
+</mat-toolbar>
 
 <!-- <div class="container">
   <div fxLayout="row wrap" fxLayoutGap="16px grid">
