--- a/frontend/src/app/components/users/users.component.html
+++ b/frontend/src/app/components/users/users.component.html
@@ -5,7 +5,7 @@
   
     <!-- Position Column -->
     <ng-container matColumnDef="numero">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
+      <th mat-header-cell *matHeaderCellDef> ID </th>
       <td mat-cell *matCellDef="let element"> {{element.numero}} </td>
     </ng-container>
   
@@ -30,7 +30,7 @@
     <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef> </th>
         <td mat-cell *matCellDef="let element; let i = index" style="text-align: right;"> 
-            <button mat-icon-button >
+            <button mat-icon-button (click)="openDialogE(element)">
                 <mat-icon>edit</mat-icon>
             </button>
             <button mat-icon-button (click)="eliminarUsuario(i)">
@@ -42,5 +42,8 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+<div class="center">
+    <button class="boton-agregar" mat-raised-button color="primary" (click)="openDialog()">Agregar</button>
+</div>
   
   
