--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -1,10 +1,11 @@
-.example-spacer {
+
+  .title-center {
     flex: 1 1 auto;
-  }
-  .title {
+    text-align: center;
     font-size: 34px;
     font-weight: 500;
   }
+    
 
   .example-card {
     max-width: 400px;
@@ -17,6 +18,5 @@
     color: white;
     width: 100%;
     height: 70px;
-    margin-left: 0px;
-    margin-top: -8px;
+    text-align: center;
   }
