--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,34 +1,6 @@
-<mat-toolbar class="toolbar">
-    <span class="title" >
-        Microservicios App
-      
-      
-    </span>
-    <!-- <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" (click) = "openDialog()" aria-label="Example icon-button with heart icon">
-      <mat-icon>create</mat-icon>
-    </button> -->
+<mat-toolbar class="toolbar" >
+  <span class="title-center">Microservicios App</span>
 </mat-toolbar>
-
-<!-- <div class="container">
-  <div fxLayout="row wrap" fxLayoutGap="16px grid">
-    <div [fxFlex]="(100/4) + '%'" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let num of [1,2,3,4,5,6]">
-      <mat-card class="example-card">
-        <mat-card-title>Usuario 1</mat-card-title>
-        <mat-card-content>
-          <p>Nombre: Juan Perez</p>
-          <p>Edad: 25</p>
-          <p>Correo: juanperez@gmail.com
-        </mat-card-content>
-        <mat-divider inset></mat-divider>
-        <mat-card-actions >
-          <button mat-button>Editar</button>
-          <button mat-button ><mat-icon>delete</mat-icon></button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-  </div>
-</div> -->
 
 
   
