--- a/frontend/src/app/components/users/users.component.html
+++ b/frontend/src/app/components/users/users.component.html
@@ -1,29 +1,22 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z4">
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-  
-    <!-- Position Column -->
     <ng-container matColumnDef="numero">
-      <th mat-header-cell *matHeaderCellDef> ID </th>
+      <th mat-header-cell *matHeaderCellDef> <h3 style="margin-top: 20px;">ID</h3> </th>
       <td mat-cell *matCellDef="let element"> {{element.numero}} </td>
     </ng-container>
   
-    <!-- Name Column -->
     <ng-container matColumnDef="nombre">
-      <th mat-header-cell *matHeaderCellDef> Nombre </th>
+      <th mat-header-cell *matHeaderCellDef> <h3 style="margin-top: 20px;">Nombre</h3> </th>
       <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
     </ng-container>
   
-    <!-- Weight Column -->
     <ng-container matColumnDef="apellido">
-      <th mat-header-cell *matHeaderCellDef> Apellido </th>
+      <th mat-header-cell *matHeaderCellDef> <h3 style="margin-top: 20px;">Apellido</h3> </th>
       <td mat-cell *matCellDef="let element"> {{element.apellido}} </td>
     </ng-container>
   
-    <!-- Symbol Column -->
     <ng-container matColumnDef="correo">
-      <th mat-header-cell *matHeaderCellDef> Correo </th>
+      <th mat-header-cell *matHeaderCellDef> <h3 style="margin-top: 20px;">Correo</h3> </th>
       <td mat-cell *matCellDef="let element"> {{element.correo}} </td>
     </ng-container>
 
