--- a/frontend/src/app/components/users/users.component.html
+++ b/frontend/src/app/components/users/users.component.html
@@ -1,23 +1,18 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z4">
 
-    <ng-container matColumnDef="numero">
+    <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> <h3 style="margin-top: 20px;">ID</h3> </th>
-      <td mat-cell *matCellDef="let element"> {{element.numero}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
     </ng-container>
   
-    <ng-container matColumnDef="nombre">
+    <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> <h3 style="margin-top: 20px;">Nombre</h3> </th>
-      <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
   
-    <ng-container matColumnDef="apellido">
-      <th mat-header-cell *matHeaderCellDef> <h3 style="margin-top: 20px;">Apellido</h3> </th>
-      <td mat-cell *matCellDef="let element"> {{element.apellido}} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="correo">
+    <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef> <h3 style="margin-top: 20px;">Correo</h3> </th>
-      <td mat-cell *matCellDef="let element"> {{element.correo}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
 
     <ng-container matColumnDef="acciones">
