Controlador rest en backend y apificacion front

--- a/frontend/src/app/components/users/users.component.html
+++ b/frontend/src/app/components/users/users.component.html
@@ -21,7 +21,7 @@
             <button mat-icon-button (click)="openDialogE(element)">
                 <mat-icon>edit</mat-icon>
             </button>
-            <button mat-icon-button (click)="eliminarUsuario(i)">
+            <button mat-icon-button (click)="eliminarUsuario(element.id)">
                 <mat-icon>delete</mat-icon>
             </button>
         </td>
