--- a/frontend/src/app/components/shared/confirm-dialog/confirm-dialog.component.html
+++ b/frontend/src/app/components/shared/confirm-dialog/confirm-dialog.component.html
@@ -16,6 +16,12 @@
           <input matInput autocomplete="off" formControlName="email">
         </mat-form-field>
       </p>
+      <p>
+        <mat-form-field appearance="outline" style="width: 100%;">
+          <mat-label>Contraseña</mat-label>
+          <input matInput autocomplete="off" formControlName="password">
+        </mat-form-field>
+      </p>
       <button type="submit" [disabled]="form.invalid" mat-raised-button color="primary" >Aceptar</button>
       <button mat-raised-button (click)="onClickCancelar()" style="margin-left: 15px;">Cancelar</button>
     </form>
