--- a/frontend/src/app/components/users/users.component.html
+++ b/frontend/src/app/components/users/users.component.html
@@ -15,6 +15,11 @@
       <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="password">
+      <th mat-header-cell *matHeaderCellDef> <h3 style="margin-top: 20px;">Contraseña</h3> </th>
+      <td mat-cell *matCellDef="let element"> {{element.password}} </td>
+    </ng-container>
+
     <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef> </th>
         <td mat-cell *matCellDef="let element; let i = index" style="text-align: right;"> 
