Securización del login

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,5 +1,8 @@
 <mat-toolbar class="toolbar" >
   <span class="title-center">Microservicios App</span>
+  <button mat-icon-button (click)="logOut()">
+    <mat-icon>exit_to_app</mat-icon>
+  </button>
 </mat-toolbar>
 <app-users></app-users>
 
