--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -19,9 +19,12 @@
             </mat-form-field>
           </p>
           <p>
-            <mat-form-field class="input-password"  style="width: 100%;">
+            <mat-form-field class="input-password"  style="width: 100%;" >
               <mat-label>Contraseña</mat-label>
-              <input matInput autocomplete="off" formControlName="password">
+              <input matInput autocomplete="off" formControlName="password" [type]="showPassword ? 'text' : 'password'">
+              <mat-icon matSuffix (click)="togglePasswordVisibility()">
+                {{showPassword?'visibility_off':'visibility'}}
+              </mat-icon>
             </mat-form-field>
           </p>
           <button class= "submit" type="submit" [disabled]="form.invalid" mat-raised-button color="primary">Aceptar</button>
