frontend con las notas implementadas

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,4 +1,7 @@
 <mat-toolbar class="toolbar" >
+  <button mat-icon-button (click)="navigateToNotes()">
+    <mat-icon>notes</mat-icon>
+  </button>
   <span class="title-center">Microservicios App</span>
   <button mat-icon-button (click)="logOut()">
     <mat-icon>exit_to_app</mat-icon>
