--- a/frontend/src/app/components/shared/confirm-dialog-N/confirm-dialog-n/confirm-dialog-n.component.html
+++ b/frontend/src/app/components/shared/confirm-dialog-N/confirm-dialog-n/confirm-dialog-n.component.html
@@ -18,9 +18,12 @@
         </p>
         <p>
           <mat-form-field appearance="outline" style="width: 100%;">
-            <mat-label>Fecha</mat-label>
-            <input matInput autocomplete="off" formControlName="date">
+            <mat-label>Elige una fecha</mat-label>
+            <input matInput [matDatepicker]="picker" formControlName="date">
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
+          
         </p>
         <button type="submit" [disabled]="form.invalid" mat-raised-button color="primary" (click)="agregarNota()" >Aceptar</button>
         <button mat-raised-button (click)="onClickCancelar()" style="margin-left: 15px;">Cancelar</button>
