--- a/frontend/src/app/components/shared/confirm-dialog-NE/confirm-dialog-ne/confirm-dialog-ne.component.html
+++ b/frontend/src/app/components/shared/confirm-dialog-NE/confirm-dialog-ne/confirm-dialog-ne.component.html
@@ -17,10 +17,12 @@
           </mat-form-field>
         </p>
         <p>
-          <mat-form-field appearance="outline" style="width: 100%;">
-            <mat-label>Fecha</mat-label>
-            <input matInput autocomplete="off" formControlName="date">
-          </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 100%;">
+              <mat-label>Elige una fecha</mat-label>
+              <input matInput [matDatepicker]="picker" formControlName="date">
+              <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
         </p>
         <button type="submit" [disabled]="form.invalid" mat-raised-button color="primary" (click)="editarNota()">Aceptar</button>
         <button mat-raised-button (click)="onClickCancelar()" style="margin-left: 15px;">Cancelar</button>
